create the login component
