# mailMaster/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\API\AuthController;
+use App\Http\Controllers\API\MailingListController;
 use App\Http\Controllers\API\NewsletterController;
 use App\Http\Controllers\API\SubscriberController;
 use Illuminate\Http\Request;
@@ -11,6 +12,9 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('logout', [AuthController::class, 'logout']);
     Route::apiResource('newsletters', NewsletterController::class);
     Route::apiResource('subscribers', SubscriberController::class);
+    Route::apiResource('mailing-lists', MailingListController::class);
+    Route::post('/newsletter/send', [NewsletterController::class, 'sendNewsletter']);
+
 
 });
 
